# OpenGlApp

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  specyfikacja.md
app/dependencies/GLAD/: glad.c
app/dependencies/GLAD/glad/: glad.h
app/dependencies/glad/include/glad/: glad.h
app/dependencies/glad/src/: glad.c
app/docs/: specyfikacja.md
app/src/: CMakeLists.txt  config.h  main.cpp
app/src/objects/: Ball.cpp  Ball.h  Boundaries.cpp  Boundaries.h  FluidSim.cpp  FluidSim.h  MainWindow.cpp  MainWindow.h  Movement.h
app/src/physics/: Ball.cpp  Ball.h  Boundaries.cpp  Boundaries.h  Movement.cpp  Movement.h
app/src/renders/: BouncingBall.cpp  BouncingBall.h  Floor.cpp  Floor.h  LeftWall.cpp  LeftWall.h  RightWall.cpp  RightWall.h
app/src/shaders/: blue.frag  green.frag
